add gz-sim dependency and include model files path in setup.py

--- a/beetlebot_description/package.xml
+++ b/beetlebot_description/package.xml
@@ -11,6 +11,7 @@
   <depend>sdf</depend>
   <depend>urdf</depend>
   <depend>xacro</depend>
+  <exec_depend>gz-sim</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
