update beetlebot_ros_bridge.yaml: add camera image topic and refine pose topic mappings

--- a/beetlebot_gazebo/config/beetlebot_ros_bridge.yaml
+++ b/beetlebot_gazebo/config/beetlebot_ros_bridge.yaml
@@ -29,15 +29,20 @@
   gz_type_name: "gz.msgs.Model"
   direction: GZ_TO_ROS
 
+- ros_topic_name: "/camera/image_raw"
+  gz_topic_name: "/camera/image_raw"
+  ros_type_name: "sensor_msgs/msg/Image"
+  gz_type_name: "gz.msgs.Image"
+  direction: GZ_TO_ROS
+
 - ros_topic_name: "/tf"
-  gz_topic_name: "/tf"
+  gz_topic_name: "/model/beetlebot/pose"
   ros_type_name: "tf2_msgs/msg/TFMessage"
   gz_type_name: "gz.msgs.Pose_V"
   direction: GZ_TO_ROS
 
-# - ros_topic_name: "/tf_static"
-#   gz_topic_name: "/pose_static"
-#   ros_type_name: "tf2_msgs/msg/TFMessage"
-#   gz_type_name: "gz.msgs.Pose_V"
-#   direction: GZ_TO_ROS
-
+- ros_topic_name: "/tf_static"
+  gz_topic_name: "/model/beetlebot/pose_static"
+  ros_type_name: "tf2_msgs/msg/TFMessage"
+  gz_type_name: "gz.msgs.Pose_V"
+  direction: GZ_TO_ROS
