update beetlebot ROS bridge configuration: add camera angle topic for bidirectional communication

--- a/beetlebot_gazebo/config/beetlebot_ros_bridge.yaml
+++ b/beetlebot_gazebo/config/beetlebot_ros_bridge.yaml
@@ -52,3 +52,9 @@
   ros_type_name: "tf2_msgs/msg/TFMessage"
   gz_type_name: "gz.msgs.Pose_V"
   direction: GZ_TO_ROS
+
+- ros_topic_name: "/camera_angle"
+  gz_topic_name: "/camera_angle"
+  ros_type_name: "std_msgs/msg/Float64"
+  gz_type_name: "gz.msgs.Double"
+  direction: ROS_TO_GZ
